2008-01-19  Bernhard Walle <bernhard.walle@gmx.de>

	* Windows: honor IE proxy settings
	* CLI: make (Internet) download progress working

2008-01-10  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: make offline mode working, show only firmwares that are
	  available offline

2008-01-07  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: Fix local upload function (error in conversion from wxString
	  to std::string)
	* GUI: Fix alignment of the device information label (below the
	  combo box) if the string is long, especially on Windows

2008-01-06  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: implement firmware information dialog (and pin information)
	* GUI: Add http://www.embedded-projects.net/usbprog in the main window

2008-01-05  Bernhard Walle <bernhard.walle@gmx.de>

	* new string tokenizer that can deal with spaces by using quoting
	* Unix: local paths can contain "~" and "~user" now
	* new function Firmwarepool::readFromFile() to unify reading a
	  firmware file into a ByteVector

2008-01-04  Bernhard Walle <bernhard.walle@gmx.de>

	* delete the versions.xml file if parsing was not possible
	* moved strip(), parse_long() and wordwrap() from util.cc to
	  stringutil.cc

2008-01-03  Bernhard Walle <bernhard.walle@gmx.de>

	* new option --disable-gui in the configure script
	* if wxGTK is not detected in the configure script, don't build and
	  install the GUI instead of failing to build

2008-01-02  Bernhard Walle <bernhard.walle@gmx.de>

	* add support for checksum testing after download to ensure
	  that the download was correct
	* don't include XML stuff in usbprog headers to fix compilation
	  with some old wxWidgets stuff
	* before reporting that a file is already on disk, check the
	  checksum, if it's wrong, try to download the file again

2008-01-01  Bernhard Walle <bernhard.walle@gmx.de>

	* trace downloading
	* Windows: fix problem that download is corrupted since Windows
	  discriminates between binary and text files and the ios::binary